天气直线图

--- a/app/weather.html
+++ b/app/weather.html
@@ -6,9 +6,9 @@
     <script src="./js/jquery-3.3.1.js"></script>
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script src="./js/rem.js" type="text/javascript" charset="utf-8"></script>
-
     <link rel="stylesheet" href="./css/weather.css">
     <link rel="stylesheet" href="./css/iconfont.css">
+    <script src="./js/echarts.common.min.js"></script>
     <script src="./js/weather.js"></script>
 </head>
 <body>
@@ -264,7 +264,9 @@
                 <!--<p>3级</p>-->
             <!--</li>-->
         </ul>
+        <div class="line"></div>
     </div>
+
     <footer>
         <ul>
             <li class="umbrella">
